Alon
1) Design changes.
2) Add b2b dashboard link in admin page.
3) Add checkbox which diasbles native review system.

2013-06-26
----
Alon
1) Add option to export local reviews.
2) archive yotpo-php lib into single phar file.

2013-06-26
----
Alon
1) Small changes in reviews export.

2013-06-27
----
Alon
1) Disable export review button and submit past orders in case there is no app key or secret.
2) add explanation to what is bottomline in settings page.
3) add terms of use link in registration page.
4) Add export order explanation link to register and settings page.
5) small tweaks to settings page.


2013-06-27
----
Alon
1) In case the user enabled bottom line in category page then disable his native reviews rating.

2013-06-27
----
Alon
1) Small change in terms of use sentence and use word press function to ease things.

2013-06-27
----
Alon
1) Small bug fixes.

2013-06-27
----
Alon
1) Change file names and diractory names to include woocomerce initials.

2013-06-27
----
Alon
1) Add links , change bug in css.

2013-07-01
----
Alon
1) Fix bug: when sending past orders, then the export review eplain link disappeard.

2013-07-04
----
Alon
1) Add screen shoots, banner and readme file to plugin before uploading to wordpress. 

2013-07-21
----
Alon
1) Change plugin to work with the new yotpo-php lib, This version will support PHP 5.2.0 

2013-07-21
----
Alon
1) Check that php 5.2.0 and above and curl are installed on server, in case not the settings page will display proper message and yotpo will be disabled on store front end.

2013-07-21
----
Alon
1) Add flag of install step done when new user is registered.

31-07-2013
----
Alon 
1) Disable Mail after purchase and widget from products which are not checked with 'Enable reviews' checkbox.
2) Fix bug: remove short codes html tags and HTML entities from fields which contain data from users in the exported reviews.
3) Fix bug: Replace <br> tags with new line, when exporting reveiews.
4) Fix bug: Past orders issues.